--- a/assignemnt3/references.bib
+++ b/assignemnt3/references.bib
@@ -1,51 +1,108 @@
-@inproceedings{Bessedik2005,
-  author    = {M. Bessedik and R. Laib and A. Boulmerka and H. Drias},
-  title     = {{Ant Colony System for Graph Coloring Problem}},
-  booktitle = {{International Conference on Computational Intelligence for Modelling, Control and Automation and International Conference on Intelligent Agents, Web Technologies and Internet Commerce (CIMCA-IAWTIC'06)}},
-  year      = {2005},
-  month     = {Nov.},
-  volume    = {1},
-  pages     = {786--791},
-  url       = {https://ieeexplore.ieee.org/document/1631360}
+
+@inproceedings{cadenas_comparative_2023,
+	title = {Comparative analysis of five algorithms for the graph coloring problem in planar graphs},
+	url = {https://ieeexplore.ieee.org/document/10252458},
+	doi = {10.1109/ICECCME57830.2023.10252458},
+	abstract = {Given a graph G = (V, E), a coloring of a graph consists in assigning a color to any vertex of the graph, such that any pair of neighboring vertices receives different colors. Finding the minimum number of colors required is impractical, even if the input graph is planar. This paper uses four algorithms based on heuristics and one meta-heuristic to color a set of planar graphs. To compare the results, the experimentation executes the five algorithms to compare their execution in a set of 35 planar graphs whose size is from a few nodes to larger graphs with thousands of nodes. The meta-heuristic always obtains the optimal solution for the experimental set. Both Danger, and Imp-Danger perform similarly; over the four heuristics, the Dsatur always finds the optimal solution. Regarding the execution time, all the heuristics obtain the respective solution in a fraction of the time required by the meta-heuristic.},
+	urldate = {2025-09-13},
+	booktitle = {2023 3rd {International} {Conference} on {Electrical}, {Computer}, {Communications} and {Mechatronics} {Engineering} ({ICECCME})},
+	author = {Cadenas, Carlos and Trejo Sánchez, Joel Antonio and Matajira, David and Ramírez, Blanca CeciliaLópez and Manzano, Francisco},
+	month = jul,
+	year = {2023},
+	keywords = {Color, deterministic heuristics, graph coloring problem, Heuristic algorithms, Mechatronics, meta-heuristics, Metaheuristics, planar graphs},
+	pages = {1--5},
+	file = {Full Text PDF:files/1452/Cadenas et al. - 2023 - Comparative analysis of five algorithms for the graph coloring problem in planar graphs.pdf:application/pdf},
 }
 
-@inproceedings{Cadenas2023,
-  author    = {C. Cadenas and J. A. Trejo S{\'{a}}nchez and D. Matajira and B. C. Ram{\'{i}}rez and F. Manzano},
-  title     = {{Comparative analysis of five algorithms for the graph coloring problem in planar graphs}},
-  booktitle = {{2023 3rd International Conference on Electrical, Computer, Communications and Mechatronics Engineering (ICECCME)}},
-  year      = {2023},
-  month     = {Jul.},
-  pages     = {1--5},
-  url       = {https://ieeexplore.ieee.org/document/10252458}
+@inproceedings{kokosinski_evaluation_2015,
+	title = {Evaluation of metaheuristics for robust graph coloring problem},
+	url = {https://ieeexplore.ieee.org/document/7321487},
+	doi = {10.15439/2015F293},
+	abstract = {In this paper a new formulation of the robust graph coloring problem (RGCP) is proposed. In opposition to classical GCP defined for the given graph G(V,E) not only elements of E but also E can be subject of color conflicts in edge vertices. Conflicts in E are assigned penalties 0{\textless};P(e){\textless};1. In addition to satisfying constraints related to the number of colors and/or a threshold of the acceptable sum of penalties for color conflicts in graph complementary edges (rigidity level), a new bound called the relative robustness threshold (RRT) is proposed. Then two metaheuristics - SA, TS and their parallel analogues PSA and PTS - for that version of RGCP are presented and experimentally compared. For comparison we use DIMACS graph coloring instances in which a selected percentage of graph edges E is randomly moved to E. Since graph densities and chromatic numbers of DIMACS GCP instances are known in advance, the RGCP instances generated on their basis are more suitable for testing algorithms than totally random instances used so far. The results of the conducted experiments are presented and discussed.},
+	urldate = {2025-09-13},
+	booktitle = {2015 {Federated} {Conference} on {Computer} {Science} and {Information} {Systems} ({FedCSIS})},
+	author = {Kokosinski, Zbigńiew and Ochał, Łukasz},
+	month = sep,
+	year = {2015},
+	keywords = {Algorithm design and analysis, Approximation algorithms, Color, Computers, Cost function, Robustness},
+	pages = {519--524},
+	file = {Full Text PDF:files/1454/Kokosinski and Ochał - 2015 - Evaluation of metaheuristics for robust graph coloring problem.pdf:application/pdf},
 }
 
-@incollection{MendezDiaz2014,
-  author    = {I. M{\'{e}}ndez D{\'{i}}az and G. Nasini and D. Sever{\'{i}}n},
-  title     = {{A Tabu Search Heuristic for the Equitable Coloring Problem}},
-  booktitle = {{Combinatorial Optimization}},
-  editor    = {P. Fouilhoux and L. E. N. Gouveia and A. R. Mahjoub and V. T. Paschos},
-  publisher = {Springer International Publishing},
-  address   = {Cham},
-  year      = {2014},
-  pages     = {347--358}
+@inproceedings{postigo_comparative_2021,
+	title = {Comparative {Analysis} of the main {Graph} {Coloring} {Algorithms}},
+	url = {https://ieeexplore.ieee.org/document/9486299/},
+	doi = {10.1109/COLCOM52710.2021.9486299},
+	abstract = {The graph coloring problem, GCP, beyond theoretical interest, it has significant practical importance due to the frequent real-life situations in which problems arise that can be modeled as a graph coloring problem. In this research, algorithms dedicated to solving the Graph Coloring Problem such as Greedy, Dsatur, RLF, AntCOL and TabuCol are described, making an objective comparison between them, reviewing parameters such as the computational time used by these, the memory of quantities and its performance as a function of the number of vertices and edges. The experimental results show that the most efficient algorithms in speed are the Greedy and dsatur. On the other hand, the tabucol and AntCol algorithms show a notable difference of inefficiency compared to large graphs, finding very good solutions, in addition, although the RLF algorithm is generally memory deficient, it presents solutions with high quality. Consequently, certain applications benefited by these algorithms are known.},
+	urldate = {2025-09-13},
+	booktitle = {2021 {IEEE} {Colombian} {Conference} on {Communications} and {Computing} ({COLCOM})},
+	author = {Postigo, Juan and Soto-Begazo, Juan and Fiorela, Villarroel R. and Picha, Gleddynuri M. and Flores-Quispe, Roxana and Velazco-Paredes, Yuber},
+	month = may,
+	year = {2021},
+	keywords = {Ant Colony (AntCol), Computational efficiency, Computational modeling, Conferences, Degree of Saturation, Graph coloring, Greedy, Greedy algorithms, Indexes, Memory management, Recursive Largest First, TabuCol},
+	pages = {1--6},
+	file = {Full Text PDF:files/1468/Postigo et al. - 2021 - Comparative Analysis of the main Graph Coloring Algorithms.pdf:application/pdf},
 }
 
-@inproceedings{Postigo2021,
-  author    = {J. Postigo and J. Soto-Begazo and V. R. Fiorela and G. M. Picha and R. Flores-Quispe and Y. Velazco-Paredes},
-  title     = {{Comparative Analysis of the main Graph Coloring Algorithms}},
-  booktitle = {{2021 IEEE Colombian Conference on Communications and Computing (COLCOM)}},
-  year      = {2021},
-  month     = {May},
-  pages     = {1--6},
-  url       = {https://ieeexplore.ieee.org/document/9486299/}
+@inproceedings{labed_fast_2018,
+	title = {A {Fast} {Heuristic} for {Graph} {B}-{Coloring} {Problem}},
+	url = {https://ieeexplore.ieee.org/document/8726204},
+	doi = {10.1109/ICCA-TICET.2018.8726204},
+	abstract = {Graph b-coloring can be defined as a proper coloring of vertices in which every color class has a vertex with neighbors in every other class. The b-chromatic number of a graph is the largest number k checking the condition that the graph can be b-colored with k colors. Irving and Manlove, have first defined the notion of b-coloring, proved that finding the b-chromatic number is NP-hard in general and polynomial for trees. In this paper, a new heuristic is proposed to solve the b-coloring problem. Comparisons of experimental results of our proposal to proven results for some graphs, such as trees and regular graphs, proved its efficiency.},
+	urldate = {2025-09-13},
+	booktitle = {2018 {JCCO} {Joint} {International} {Conference} on {ICT} in {Education} and {Training}, {International} {Conference} on {Computing} in {Arabic}, and {International} {Conference} on {Geocomputing} ({JCCO}: {TICET}-{ICCA}-{GECO})},
+	author = {LABED, Said and KOUT, Akram and CHIKHI, Salim},
+	month = nov,
+	year = {2018},
+	keywords = {Approximation algorithms, b-chromatic number, b-coloring, Benchmark testing, Bipartite graph, chromatic number, Color, Heuristic, NP-hard problem, Proposals, Switches},
+	pages = {1--6},
+	file = {Full Text PDF:files/1475/LABED et al. - 2018 - A Fast Heuristic for Graph B-Coloring Problem.pdf:application/pdf},
 }
 
-@inproceedings{Indumathi2021,
-  author    = {S. M. Indumathi and N. Prajwala and N. Pushpa},
-  title     = {{Implementation of Vertex Colouring Using Adjacency Matrix}},
-  booktitle = {{2021 5th International Conference on Electrical, Electronics, Communication, Computer Technologies and Optimization Techniques (ICEECCOT)}},
-  year      = {2021},
-  month     = {Dec.},
-  pages     = {69--73},
-  url       = {https://ieeexplore.ieee.org/document/9708024}
+@inproceedings{indumathi_implementation_2021,
+	title = {Implementation of {Vertex} {Colouring} {Using} {Adjacency} {Matrix}},
+	url = {https://ieeexplore.ieee.org/document/9708024},
+	doi = {10.1109/ICEECCOT52851.2021.9708024},
+	abstract = {Graph colouring is very useful when analysing graph traversal, degree of the vertex, analysing printed circuit boards, world map, mobile networks etc. In this article an attempt is made to analyse vertex colouring on small graphs, for that capital English alphabets are been considered which has different small shapes. English alphabets cover some possible shapes which can include the concepts of tree, parallel edges, loop and pendent vertex. Here adjacency matrixis used to analyse connectivity. There are different types of graphs like simple graphs which have no parallel edges and loops, trees, complete graphs etc. since it is difficult to consider all the variation capital alphabets of English are considered. Complex graphs are nothing but combination of simple graphs. Hence any methods implemented on simple graphs can be extended to complex graphs, so the capital English alphabets are considered.},
+	urldate = {2025-09-13},
+	booktitle = {2021 5th {International} {Conference} on {Electrical}, {Electronics}, {Communication}, {Computer} {Technologies} and {Optimization} {Techniques} ({ICEECCOT})},
+	author = {Indumathi, S M and Prajwala, Nb and Pushpa, Nb},
+	month = dec,
+	year = {2021},
+	keywords = {Aerospace electronics, Alphabets colouring, Chromatic number, Complexity theory, Computer languages, Degree of vertex, Printed circuits, Shape, Time complexity, Transmission line matrix methods, Vertex colouring},
+	pages = {69--73},
+	file = {Full Text PDF:files/1491/Indumathi et al. - 2021 - Implementation of Vertex Colouring Using Adjacency Matrix.pdf:application/pdf},
+}
+
+@inproceedings{bessedik_ant_2005,
+	title = {Ant {Colony} {System} for {Graph} {Coloring} {Problem}},
+	volume = {1},
+	url = {https://ieeexplore.ieee.org/document/1631360},
+	doi = {10.1109/CIMCA.2005.1631360},
+	abstract = {In this paper, we present a first ACO approach, namely ant colony system (ACS) for the graph colouring problem (GCP). We implemented two strategies of ACS for the GCP; construction strategy and improvement strategy. In construction strategy, the algorithm iteratively constructs feasible solutions. The phase of construction is carried out by a specific constructive method for the problem, that is: recursive largest first (RLF) or DSATUR. These two constructive methods take into account different updates of pheromone trails and the heuristic information. The improvement strategy uses a local search, namely tabu search, to improve the best solution obtained at each iteration of the algorithm. To test the efficiency of our approach, we also implement best-known algorithms for the GCP. That is, scatter search (SS) which, integrates also tabu search (TS), ant system (AS), RLF and DSATUR. This paper report experimental results on some well studied Dimacs graphs. A comparison between the different algorithms shows that the algorithm we called ACS1\_R (construction strategy, construction done by RLF) gives best results. It approaches the best colouring algorithms and outperforms some hybrid algorithms on some large instances of the famous Dimacs benchmarks},
+	urldate = {2025-09-13},
+	booktitle = {International {Conference} on {Computational} {Intelligence} for {Modelling}, {Control} and {Automation} and {International} {Conference} on {Intelligent} {Agents}, {Web} {Technologies} and {Internet} {Commerce} ({CIMCA}-{IAWTIC}'06)},
+	author = {Bessedik, M. and Laib, R. and Boulmerka, A. and Drias, H.},
+	month = nov,
+	year = {2005},
+	keywords = {Ant colony optimization, Genetic algorithms, Iterative algorithms, NP-hard problem, Optimization methods, Scattering, Simulated annealing, Testing},
+	pages = {786--791},
+	file = {Full Text PDF:files/1505/Bessedik et al. - 2005 - Ant Colony System for Graph Coloring Problem.pdf:application/pdf},
+}
+
+@inproceedings{mendez_diaz_tabu_2014,
+	address = {Cham},
+	title = {A {Tabu} {Search} {Heuristic} for the {Equitable} {Coloring} {Problem}},
+	isbn = {978-3-319-09174-7},
+	doi = {10.1007/978-3-319-09174-7_30},
+	abstract = {The Equitable Coloring Problem is a variant of the Graph Coloring Problem where the sizes of two arbitrary color classes differ in at most one unit. This additional condition, called equity constraints, arises naturally in several applications. Due to the hardness of the problem, current exact algorithms can not solve large-sized instances. Such instances must be addressed only via heuristic methods.},
+	language = {en},
+	booktitle = {Combinatorial {Optimization}},
+	publisher = {Springer International Publishing},
+	author = {Méndez Díaz, Isabel and Nasini, Graciela and Severín, Daniel},
+	editor = {Fouilhoux, Pierre and Gouveia, Luis Eduardo Neves and Mahjoub, A. Ridha and Paschos, Vangelis T.},
+	year = {2014},
+	keywords = {Combinatorial optimization, Equitable coloring, Tabu search},
+	pages = {347--358},
+	file = {Preprint PDF:files/1449/Díaz et al. - 2014 - A tabu search heuristic for the Equitable Coloring Problem.pdf:application/pdf},
 }
